--- a/templates/login.html
+++ b/templates/login.html
@@ -20,13 +20,14 @@
           <div class="take-input" style="margin-top: 5px;">
             <p id="ip-placeholder">Password</p>
             <input type="password" name="password" placeholder="Password" style="font-size:medium;">
+            <a href="/reset_password">Forgot password?</a>
           </div>
 
           <div class="take-input">
             <button type="submit" style="margin-top: 8px;">Login</button>
           </div>
         </form>
-        <h3>Don't have an account? <a href="/register"> Register</a> it's free</h3>
+        <h4>Don't have an account? <a href="/register"> Register</a> it's free</h4>
       </div>
     </div>
 </body>
