--- a/templates/register.html
+++ b/templates/register.html
@@ -15,7 +15,7 @@
         <form method="POST" enctype="multipart/form-data">
           <div class="take-input">
             <p id="ip-placeholder">Full Name</p>
-            <input name="full-name" placeholder="Enter your full name" style="font-size:medium;">
+            <input name="full-name" placeholder="Enter your full name" style="font-size:medium;" required>
           </div>
 
           <div class="take-input" style="margin-top: 5px;">
@@ -25,12 +25,12 @@
 
           <div class="take-input" style="margin-top: 5px;">
             <p id="ip-placeholder">Password</p>
-            <input name="password" placeholder="Create a password" style="font-size:medium;">
+            <input name="password" type="password" placeholder="Create a password" style="font-size:medium;">
           </div>
 
           <div class="take-input" style="margin-top: 5px;">
             <p id="ip-placeholder">Confirm password</p>
-            <input name="confirm_password" placeholder="Confirm your password" style="font-size:medium;">
+            <input name="confirm_password" type="password" placeholder="Confirm your password" style="font-size:medium;">
           </div>
 
           <div class="take-input" style="margin-top: 5px;">
